--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-27T11:59:28.235274200Z",
-     "start_time": "2023-11-27T11:59:26.828540100Z"
+     "end_time": "2023-11-27T13:37:27.639587200Z",
+     "start_time": "2023-11-27T13:37:27.573765200Z"
     }
    },
    "outputs": [],
@@ -43,15 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [],
+   "execution_count": 16,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'random' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[16], line 6\u001B[0m\n\u001B[0;32m      4\u001B[0m df_smaller \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39mdrop(columns\u001B[38;5;241m=\u001B[39m[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTotal anxiety score\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTotal Depression score\u001B[39m\u001B[38;5;124m\"\u001B[39m], inplace \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[0;32m      5\u001B[0m seed \u001B[38;5;241m=\u001B[39m \u001B[38;5;241m33\u001B[39m\n\u001B[1;32m----> 6\u001B[0m \u001B[43mrandom\u001B[49m\u001B[38;5;241m.\u001B[39mseed(seed)\n\u001B[0;32m      8\u001B[0m test_idx_depression \u001B[38;5;241m=\u001B[39m sample(\u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m0\u001B[39m,df_smaller\u001B[38;5;241m.\u001B[39mshape[\u001B[38;5;241m0\u001B[39m]),\u001B[38;5;241m20\u001B[39m)\n\u001B[0;32m      9\u001B[0m test_depression \u001B[38;5;241m=\u001B[39m df_smaller\u001B[38;5;241m.\u001B[39miloc[test_idx_depression]\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'random' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "from random import sample, seed\n",
+    "import random\n",
+    "from random import sample\n",
     "#random forest per livello ansia, senza depressione.\n",
     "y_depression = df[\"Total Depression score\"]\n",
     "df_smaller = df.drop(columns=[\"Total anxiety score\", \"Total Depression score\"], inplace = False)\n",
     "\n",
-    "seed(33)\n",
+    "seed = 33\n",
+    "random.seed(seed)\n",
     "\n",
     "test_idx_depression = sample(range(0,df_smaller.shape[0]),20)\n",
     "test_depression = df_smaller.iloc[test_idx_depression]\n",
@@ -65,35 +79,29 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T11:59:28.251096200Z",
-     "start_time": "2023-11-27T11:59:28.235274200Z"
+     "end_time": "2023-11-27T13:38:57.849956300Z",
+     "start_time": "2023-11-27T13:38:57.819279200Z"
     }
    },
    "id": "ab68791bcba106d2"
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5933507034313876\n",
-      "0.5358110762760803\n",
-      "1.4722175755090883\n",
-      "1.885648432267596\n",
-      "0.55013198239148\n",
-      "3.137310236435697\n",
-      "2.4583131859289242\n",
-      "1.8504798267799432\n",
-      "0.6885486180512852\n",
-      "0.7544960429151079\n",
-      "1.956539429165428\n",
-      "0.5713709426677602\n",
-      "2.493399023920004\n",
-      "0.49574423184943595\n",
-      "1.7958817520398975\n"
+      "0.5574447315640676\n",
+      "1.8678234015958748\n",
+      "0.9716244086713353\n",
+      "2.1999813104929107\n",
+      "1.9512480684902072\n",
+      "1.044729754178819\n",
+      "2.021785157851579\n",
+      "2.3669487494874946\n",
+      "0.8439819598195983\n"
      ]
     }
    ],
@@ -106,57 +114,55 @@
     "min_validation_error = sys.maxsize\n",
     "min_model = None\n",
     "#TODO aggiunti parametri list e max_depth, però stranamente la curva di validation error non è quella che ci si aspetta...\n",
-    "list_n_trees = [50,100,200,400,1000]\n",
-    "max_depth = [3,6,9]\n",
+    "max_depth = range(2,11)\n",
     "MSE_VAL_list = []\n",
     "MSE_TRAIN_list = []\n",
     "kf = KFold(n_splits=5, shuffle=True)\n",
     "kf.get_n_splits(df_training_validation)\n",
     "rf = None\n",
-    "for i in range(0, len(list_n_trees)):\n",
-    "        for j in range(0, len(max_depth)):\n",
-    "                MSE_TR = 0\n",
-    "                MSE_VAL = 0\n",
-    "                for z, (train_index, test_index) in enumerate(kf.split(df_training_validation)):\n",
-    "                        #TODO inserire poi i parametri. Per ora risultati anomali nel MSE\n",
-    "                        rf = RandomForestRegressor(n_estimators=list_n_trees[i], max_depth=max_depth[j], random_state=0)\n",
-    "                        rf.fit(df_training_validation.iloc[train_index], y_depression.iloc[train_index])\n",
-    "                        y_depression_validation = rf.predict(df_training_validation.iloc[test_index])\n",
-    "                        y_depression_training = rf.predict(df_training_validation.iloc[train_index])\n",
-    "                        #calcolo training error\n",
-    "                        MSE_TR = np.mean((y_depression.iloc[train_index]-y_depression_training)**2)\n",
-    "                        #Calcolo del validation error...\n",
-    "                        MSE_VAL = np.mean((y_depression.iloc[test_index]-y_depression_validation)**2)\n",
-    "                        #print(MSE_VAL)\n",
-    "                        MSE_VAL_list.append(MSE_VAL)\n",
-    "                        MSE_TRAIN_list.append(MSE_TR)\n",
-    "                MSE_mean_validation = np.mean(MSE_VAL)\n",
-    "                print(MSE_mean_validation)\n",
-    "                if min_validation_error > MSE_mean_validation:\n",
-    "                        min_model = rf\n",
-    "                        min_validation_error = MSE_mean_validation\n",
-    "                MSE_VAL_list = []\n",
-    "                MSE_TRAIN_list = []\n",
-    "                \n"
+    "for j in range(0, len(max_depth)):\n",
+    "        MSE_TR = 0\n",
+    "        MSE_VAL = 0\n",
+    "        for z, (train_index, test_index) in enumerate(kf.split(df_training_validation)):\n",
+    "                #TODO inserire poi i parametri. Per ora risultati anomali nel MSE\n",
+    "                rf = RandomForestRegressor(max_depth=max_depth[j], random_state=seed)\n",
+    "                rf.fit(df_training_validation.iloc[train_index], y_depression.iloc[train_index])\n",
+    "                y_depression_validation = rf.predict(df_training_validation.iloc[test_index])\n",
+    "                y_depression_training = rf.predict(df_training_validation.iloc[train_index])\n",
+    "                #calcolo training error\n",
+    "                MSE_TR = np.mean((y_depression.iloc[train_index]-y_depression_training)**2)\n",
+    "                #Calcolo del validation error...\n",
+    "                MSE_VAL = np.mean((y_depression.iloc[test_index]-y_depression_validation)**2)\n",
+    "                #print(MSE_VAL)\n",
+    "                MSE_VAL_list.append(MSE_VAL)\n",
+    "                MSE_TRAIN_list.append(MSE_TR)\n",
+    "        MSE_mean_validation = np.mean(MSE_VAL)\n",
+    "        print(MSE_mean_validation)\n",
+    "        if min_validation_error > MSE_mean_validation:\n",
+    "                min_model = rf\n",
+    "                min_validation_error = MSE_mean_validation\n",
+    "        MSE_VAL_list = []\n",
+    "        MSE_TRAIN_list = []\n",
+    "        \n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T12:00:27.532179600Z",
-     "start_time": "2023-11-27T11:59:28.243588600Z"
+     "end_time": "2023-11-27T13:37:41.441380600Z",
+     "start_time": "2023-11-27T13:37:27.654642500Z"
     }
    },
    "id": "a368c9f318180434"
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.49034488451856256"
+      "text/plain": "0.45568118081180814"
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,15 +177,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T12:00:29.691740100Z",
-     "start_time": "2023-11-27T12:00:27.532179600Z"
+     "end_time": "2023-11-27T13:37:41.777289700Z",
+     "start_time": "2023-11-27T13:37:41.453632300Z"
     }
    },
    "id": "da52aa4103d9b3b0"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
@@ -200,15 +206,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T12:00:33.330718200Z",
-     "start_time": "2023-11-27T12:00:29.691740100Z"
+     "end_time": "2023-11-27T13:56:12.514033900Z",
+     "start_time": "2023-11-27T13:56:06.926158900Z"
     }
    },
    "id": "8676e647f9a9444d"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestRegressor \n",
@@ -225,8 +231,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T12:00:33.351893400Z",
-     "start_time": "2023-11-27T12:00:33.351893400Z"
+     "end_time": "2023-11-27T13:37:47.094120100Z",
+     "start_time": "2023-11-27T13:37:47.092149700Z"
     }
    },
    "id": "738da117e3b848c1"
