Aggiunto mse per il test

--- a/linear_regression.ipynb
+++ b/linear_regression.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 111,
    "outputs": [
     {
      "name": "stdout",
@@ -295,7 +295,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.580\n",
       "Method:                 Least Squares   F-statistic:                     6.529\n",
       "Date:                Mon, 27 Nov 2023   Prob (F-statistic):           0.000860\n",
-      "Time:                        11:58:24   Log-Likelihood:                -17.135\n",
+      "Time:                        15:20:10   Log-Likelihood:                -17.135\n",
       "No. Observations:                  25   AIC:                             48.27\n",
       "Df Residuals:                      18   BIC:                             56.80\n",
       "Df Model:                           6                                         \n",
@@ -330,11 +330,52 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T10:58:24.085521432Z",
-     "start_time": "2023-11-27T10:58:24.047438436Z"
+     "end_time": "2023-11-27T14:20:11.021094660Z",
+     "start_time": "2023-11-27T14:20:10.976019823Z"
     }
    },
    "id": "b78c98e55cb01918"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Training---\n",
+      "0.7629679144385029\n",
+      "2.0910077400996294\n",
+      "0.3202879725514606\n",
+      "-----Test-----\n",
+      "1.1599970616243453\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test = test[\"HADS_Score\"]\n",
+    "X_test = test.loc[:,test.columns != \"HADS_Score\"]\n",
+    "X_test = X_test.loc[:,X_test.columns.isin(X_colums)]\n",
+    "X_test = sm.add_constant(X_test)\n",
+    "predictions = results.predict(X_test)\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "mse = mean_squared_error(y_test, predictions)\n",
+    "print(\"---Training---\")\n",
+    "print(results.mse_total)\n",
+    "print(results.mse_model)\n",
+    "print(results.mse_resid)\n",
+    "print(\"-----Test-----\")\n",
+    "print(mse)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T14:22:49.373986461Z",
+     "start_time": "2023-11-27T14:22:49.367380320Z"
+    }
+   },
+   "id": "e78f4cafb0ec16f3"
   }
  ],
  "metadata": {
