rimosso seme dove non necessario

--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -106,7 +106,7 @@
     "from sklearn.model_selection import KFold\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "\n",
-    "def choose_hyperparams(dataframe,y,seed_p):\n",
+    "def choose_hyperparams(dataframe,y):\n",
     "        max_depth = range(2,7)\n",
     "        max_features = [\"sqrt\", \"log2\", 0.3]\n",
     "        n_trees = [10,50,100]\n",
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "min_model, mse_tr_epochs, mse_val_epochs = choose_hyperparams(df_training_validation,y_depression,seed)\n",
+    "min_model, mse_tr_epochs, mse_val_epochs = choose_hyperparams(df_training_validation,y_depression)\n",
     "print(min_model.get_params())"
    ],
    "metadata": {
@@ -325,7 +325,7 @@
     "\n",
     "seed_anxiety = 332000\n",
     "random.seed(seed_anxiety)\n",
-    "min_model_anxiety, mse_tr_epochs_anxiety, mse_val_epochs_anxiety = choose_hyperparams(df_training_validation,y_anxiety,seed_anxiety)\n",
+    "min_model_anxiety, mse_tr_epochs_anxiety, mse_val_epochs_anxiety = choose_hyperparams(df_training_validation,y_anxiety)\n",
     "print(min_model_anxiety.get_params())"
    ],
    "metadata": {
